color: Fix smearing out of Night Light effect

The interpolation function expects factor values between 0. and 1.,
so we need to either pass the difference between current time and
transition start, or between transition end and current time - not
the difference between transition start and current time, which is
always negative.

https://bugzilla.gnome.org/show_bug.cgi?id=778667